--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/accent_material_dark"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -34,14 +35,5 @@
         android:layout_centerHorizontal="true"
         android:onClick="showList"
         android:text="@string/show_list" />
-
-    <Button
-        android:id="@+id/exportDbBtn"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/listBtn"
-        android:layout_centerHorizontal="true"
-        android:onClick="exportDb"
-        android:text="@string/export_database" />
 
 </RelativeLayout>
