--- a/app/src/main/res/menu/menu_list_view.xml
+++ b/app/src/main/res/menu/menu_list_view.xml
@@ -1,2 +1,2 @@
 <menu xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.smd.studio.adcashdemo.ListViewActivity"></menu>
+    tools:context="com.smd.studio.adcashdemo.Activity.ListViewActivity" />
