--- a/app/src/main/res/layout/deal_list_item.xml
+++ b/app/src/main/res/layout/deal_list_item.xml
@@ -7,8 +7,7 @@
     <ImageView
         android:id="@+id/dealImage"
         android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:background="@drawable/logo" />
+        android:layout_height="75dp" />
 
     <TextView
         android:id="@+id/dealTitle"
