--- a/app/src/main/res/layout/activity_more_details.xml
+++ b/app/src/main/res/layout/activity_more_details.xml
@@ -14,9 +14,7 @@
         android:layout_height="250dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:background="@drawable/logo"
-        android:scaleType="matrix" />
+        android:layout_centerVertical="true" />
 
     <TextView
         android:id="@+id/moreInfoTitle"
@@ -25,6 +23,5 @@
         android:layout_below="@+id/moreInfoImg"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 </RelativeLayout>
